# widowx_gazebo_moveit

./: LICENSE  README.md
red_block/: red_cube.sdf
widowx_arm_bringup/config/: widowx_arm.yaml
widowx_arm_bringup/launch/: arm.launch  arm_moveit.launch
widowx_arm_description/robots/: widowx_arm.urdf.xacro
widowx_arm_description/urdf/: sensor_sr300.urdf.xacro  widowx.gazebo  widowx.urdf.xacro  widowx_gripper.xacro
widowx_arm_ikfast_plugin/src/: widowx_arm_ikfast_moveit_plugin.cpp  widowx_arm_ikfast_solver.cpp
widowx_arm_moveit_config/: .setup_assistant
widowx_arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  widowx_arm.srdf
widowx_arm_moveit_config/launch/: move_group.launch  moveit.rviz  trajectory_execution.launch.xml  widowx_arm_moveit.launch
widowx_block_manipulation/demo/: block_manipulation_demo.cpp
widowx_block_manipulation/src/: block_detection_action_server.cpp  pick_and_place_action_server.cpp
widowx_gazebo/: CMakeLists.txt  package.xml
widowx_gazebo/controller/: arm_controller_widowx.yaml  arm_controller_widowx_effort.yaml  joint_state_controller.yaml
widowx_gazebo/launch/: controller_utils.launch  widowx_arm_gazebo.launch
widowx_gazebo/world/: widowx.world
widowx_gazebo/world/green_block/: green_cube.sdf  model.config
widowx_gazebo/world/red_block/: model.config  red_cube.sdf
