<?xml version="1.0"?>
<package>
  <name>widowx_gazebo</name>
  <version>0.0.0</version>
  <description>The widowx_gazebo package</description>
  <maintainer email="ak2458@cornell.edu">Alap Kshirsagar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>widowx_description</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>

</package>
